--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
 
   cont:
     image: "alpine"
-    user: "5000:5000"
-    working_dir: /app
+    # user: "5000:5000"
+    working_dir: /app/go
     volumes:
       - .:/app
-    command: "./ownership-test"
+    command: "./api-rg-data-migration"
 
