--- a/Dockerfile-python
+++ b/Dockerfile-python
@@ -11,5 +11,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # COPY . .
 
-CMD [ "python", "-u", "./main.py" ]
+# CMD [ "python", "-u", "./main.py" ]
 # CMD [ "sleep", "10000"]
