--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,12 @@ services:
         # command: "./api-rg-data-migration"
     
 
-    api-rg-rubrics:
-        image: api-rg-rubrics
+    api-rg-data-migration-prod:
+        image: api-rg-data-migration-prod
         build: 
             context: .
             dockerfile: Dockerfile-python
-        container_name: api-rg-rubrics
+        container_name: api-rg-data-migration-prod
         restart: unless-stopped
         volumes:
             - ./python:/usr/src/app
@@ -24,6 +24,7 @@ services:
         environment: 
             - RGPASS=${PGPASSWORD}
             - RGDSN=host=134.0.107.93 port=5432 dbname=rgdb user=root password=rosgas2011
+        # command: python -u main.py
         command: sleep 5000
 
 # outer network to communicate with other services ----------------------------------------------------
