first real deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
 
         environment: 
             - RGDSN=${RGDSN}
-        # command: python -u main.py
-        command: sleep 10000
+        command: python -u main.py
+        # command: sleep 10000
 
 # outer network to communicate with other services ----------------------------------------------------
 networks:
